--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,7 +51,7 @@ if (ENABLE_TESTING)
     FOREACH (test ${tests})
         get_filename_component(test_name ${test} NAME)
         message("Adding test: " ${test_name})
-        add_executable(${test_name} ${PROJECT_SOURCE_DIR}/test/${test_name})
+        add_executable(${test_name} ${SOURCES} ${PROJECT_SOURCE_DIR}/test/${test_name})
         target_link_libraries(${test_name} PRIVATE ${CMAKE_THREAD_LIBS_INIT} orderbook gtest gtest_main Boost::algorithm Boost::intrusive udecimal pool)
         add_test(${test_name} ${test_name})
         set_property(TEST ${test_name} PROPERTY LABELS "test")
